force-app/main/default/objects/SalesKPI__c/SalesKPI__c.object-meta.xml
<CustomObject>
    <label>Sales KPI</label>
    <nameField>
        <label>SalesKPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>