force-app/main/default/objects/SalesKPI__c/fields/ActiveCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveCount__c</fullName>
    <label>ActiveCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>