force-app/main/default/objects/SalesKPI__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <label>AsOfDate</label>
    <type>Date</type>
</CustomField>