force-app/main/default/objects/SalesKPI__c/fields/ChurnedCount__c.field-meta.xml
<CustomField>
    <fullName>ChurnedCount__c</fullName>
    <label>ChurnedCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>