force-app/main/default/objects/SalesKPI__c/fields/ChurnPct__c.field-meta.xml
<CustomField>
    <fullName>ChurnPct__c</fullName>
    <label>ChurnPct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>