force-app/main/default/objects/SalesKPI__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Campo fórmula que obtiene el nombre del mes en el que fue creado el registro. Se utiliza principalmente para reportes y análisis cronológico de los datos dentro del objeto SalesKPI__c</description>
    <formula>CASE(
    MONTH( DATEVALUE(CreatedDate) ),
    1, &quot;Enero&quot;,
    2, &quot;Febrero&quot;,
    3, &quot;Marzo&quot;,
    4, &quot;Abril&quot;,
    5, &quot;Mayo&quot;,
    6, &quot;Junio&quot;,
    7, &quot;Julio&quot;,
    8, &quot;Agosto&quot;,
    9, &quot;Septiembre&quot;,
    10, &quot;Octubre&quot;,
    11, &quot;Noviembre&quot;,
    12, &quot;Diciembre&quot;,
    &quot;N/A&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo muestra el mes de creación del registro (por ejemplo, Enero, Febrero, etc.). Es útil para agrupar y analizar información por mes dentro de los reportes.</inlineHelpText>
    <label>Mes</label>
    <type>Text</type>
</CustomField>