force-app/main/default/objects/SalesKPI__c/fields/NewAccountCount__c.field-meta.xml
<CustomField>
    <fullName>NewAccountCount__c</fullName>
    <label>New Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>