force-app/main/default/objects/SalesKPI__c/fields/RecoveredCount__c.field-meta.xml
<CustomField>
    <fullName>RecoveredCount__c</fullName>
    <label>Recovered Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>