force-app/main/default/objects/SalesKPI__c/fields/RetainedCount__c.field-meta.xml
<CustomField>
    <fullName>RetainedCount__c</fullName>
    <label>RetainedCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>