force-app/main/default/objects/SalesKPI__c/fields/RetainedPct__c.field-meta.xml
<CustomField>
    <fullName>RetainedPct__c</fullName>
    <description>Porcentaje de clientes activos que compraron en el mes actual</description>
    <label>RetainedPct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>